--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             color: white;
         }
         p{
-            color: red;
+            color:white;
         }
     </style>
 </head>
